--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,12 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'com.google.dagger.hilt.android'
-   // id 'com.google.gms.google-services'
+    id 'com.google.gms.google-services'
 
 }
 
 android {
+    namespace 'com.example.berkayyalcinpazaramacase'
     compileSdk 33
 
     defaultConfig {
@@ -46,6 +47,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation "com.google.android.material:material:$material_version"
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -99,6 +101,7 @@ dependencies {
 
     implementation("androidx.datastore:datastore-preferences:$datastore_version")
 
+    //Firebase
     implementation platform('com.google.firebase:firebase-bom:31.0.2')
     implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
 }
